<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:contentPadding="@dimen/card_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title to post" />

        <TextView
            android:id="@+id/tvBody"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/def_small_margin"
            android:maxLines="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="Body to post" />


        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/delete_image"
            app:layout_constraintEnd_toStartOf="@+id/tvKnowMore"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/delete"
            android:layout_marginTop="@dimen/card_padding"
            android:layout_marginRight="@dimen/card_padding"
            />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/def_small_avatar_size"
            android:layout_height="@dimen/def_small_avatar_size"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/card_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBody"
            tools:background="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvAuthorName"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_padding"
            android:layout_marginTop="@dimen/card_padding"
            android:layout_marginStart="@dimen/bottom_margin"
            app:layout_constraintLeft_toRightOf="@+id/ivAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvBody"
            tools:text="Karan Trehan" />


        <TextView
            android:id="@+id/tvKnowMore"
            style="@style/actionable_text"
            android:text="@string/know_more"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/card_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="58dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>