<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_new_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.Contact.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:padding="@dimen/card_margin"
            android:hint="@string/text_post_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_post_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="2"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.Contact.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:padding="@dimen/card_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:hint="@string/text_post_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_post_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="15"
                android:minLines="5"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_post"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/bottom_margin"
            android:layout_marginRight="@dimen/bottom_margin"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:text="@string/text_create_post"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:rippleColor="@color/colorPrimaryDark"
            app:cornerRadius="@dimen/card_margin"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="@dimen/card_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".list.ListActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/divider"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/post_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>