<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlAuth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                app:cardBackgroundColor="@android:color/white"
                app:contentPadding="@dimen/card_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitle"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        tools:text="Title to post" />

                    <TextView
                        android:id="@+id/tvBody"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/def_small_margin"
                        android:layout_marginBottom="@dimen/def_small_margin"
                        android:textColor="@color/secondary_text"
                        tools:text="Body to post" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#333133" />

                    <RelativeLayout
                        android:id="@+id/rlUserDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/card_margin"
                        tools:visibility="visible">

                        <ImageView
                            android:id="@+id/ivAvatar"
                            android:layout_width="@dimen/def_avatar_size"
                            android:layout_height="@dimen/def_avatar_size"
                            android:contentDescription="@string/user_image"
                            android:scaleType="centerCrop"
                            tools:background="@mipmap/ic_launcher" />

                        <TextView
                            android:id="@+id/tvAuthorName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/ivAvatar"
                            android:layout_toRightOf="@+id/ivAvatar"
                            android:padding="@dimen/card_padding"
                            android:textColor="@color/secondary_text"
                            tools:text="Karan Trehan" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvCommentError"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_comments_error"
                        android:textColor="@color/error_text"
                        android:visibility="gone" />

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:padding="5dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout1"
                            style="@style/Widget.Contact.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="12dp"
                            android:hint="@string/text_comments">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edt_comments"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLines="5"
                                android:textColor="@color/colorPrimary"
                                />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_send"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="10dp"
                            android:layout_gravity="end|center_vertical"
                            android:background="@drawable/send" />

                    </FrameLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlComments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/comment_item" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>